# yt-subtitle-gen

./: .gitignore  LICENSE
backend/: main.py  pyproject.toml  separate.py  subtitles.py  transcribe.py
backend/app/: config.py  main.py
backend/app/api/: video.py
backend/tests/: test_subtitles.py
webui/: package.json  pnpm-lock.yaml
